--- a/front-end/app/components/layout/Navigation/Menu/Menu.module.scss
+++ b/front-end/app/components/layout/Navigation/Menu/Menu.module.scss
@@ -1,7 +1,7 @@
 .menu {
 	@apply mb-12;
 	> h6 {
-		@apply text-gray-600 mb-3 text-sm;
+		@apply text-gray-600 mb-3 text-xs uppercase font-bold;
 	}
 
 	.lists {
