--- a/front-end/app/components/Genres/Genres.module.scss
+++ b/front-end/app/components/Genres/Genres.module.scss
@@ -1,11 +1,15 @@
 .genre__list {
-	@apply flex flex-row gap-x-6;
+	@apply flex flex-row gap-x-6 items-start;
 	.genre__item {
-		@apply basis-1/5 bg-gray-700 p-4 rounded-2xl transition-all;
+		@apply basis-1/5 bg-gray-700 p-4 rounded-2xl transition-transform;
 		&:hover {
 			@apply bg-gray-650 shadow-2xl scale-110;
 			> a > svg {
 				@apply fill-primary;
+			}
+
+			> a > p {
+				@apply transition-all h-fit mt-4 opacity-100;
 			}
 		}
 
@@ -15,6 +19,10 @@
 
 		> a > svg {
 			@apply w-12 h-12 mb-6;
+		}
+
+		> a > p {
+			@apply h-0 opacity-0 text-gray-600 text-center;
 		}
 	}
 }
