--- a/front-end/app/components/Genres/Genres.module.scss
+++ b/front-end/app/components/Genres/Genres.module.scss
@@ -1,20 +1,14 @@
 .genre__list {
 	@apply flex flex-row gap-x-6 items-start;
 	.genre__item {
-		@apply basis-1/4 bg-gray-700 p-4 rounded-2xl transition-transform;
-		&:hover {
-			@apply bg-gray-650 shadow-2xl scale-110;
-			> a > svg {
-				@apply fill-primary;
-			}
-
-			> a > p {
-				@apply transition-all h-fit mt-4 opacity-100;
-			}
-		}
+		@apply basis-1/4 bg-gray-200 p-4 rounded-2xl transition-transform;
 
 		> a {
 			@apply flex flex-col justify-center items-center;
+		}
+
+		> a > h6 {
+			@apply text-gray-800;
 		}
 
 		> a > svg {
@@ -23,6 +17,17 @@
 
 		> a > p {
 			@apply h-0 opacity-0 text-gray-600 text-center;
+		}
+
+		&:hover {
+			@apply bg-white shadow-2xl scale-110;
+			> a > svg {
+				@apply fill-primary;
+			}
+
+			> a > p {
+				@apply transition-all h-fit mt-4 opacity-100;
+			}
 		}
 	}
 }
