--- a/front-end/app/components/layout/Navigation/Menu/Menu.module.scss
+++ b/front-end/app/components/layout/Navigation/Menu/Menu.module.scss
@@ -10,22 +10,22 @@
 				@apply pl-layout my-6 relative after:content-[''] after:ml-0.5 after:absolute after:-left-0.5 after:top-0 after:h-full after:w-1 after:rounded-md;
 				> a {
 					> p {
-						@apply text-gray-600 ml-3;
+						@apply text-gray-500 ml-3;
 					}
 
 					> svg {
-						@apply fill-gray-600 w-5 h-5;
+						@apply fill-gray-500 w-5 h-5;
 					}
 				}
 
 				&.active {
 					@apply after:bg-primary;
 					> a > p {
-						@apply text-white;
+						@apply text-gray-800;
 					}
 
 					> a > svg {
-						@apply fill-white;
+						@apply fill-gray-800;
 					}
 				}
 			}
