--- a/front-end/app/components/layout/Header/Search/Search.module.scss
+++ b/front-end/app/components/layout/Header/Search/Search.module.scss
@@ -3,7 +3,7 @@
 }
 
 .list__box {
-	@apply absolute w-full rounded-3xl z-2 p-layout overflow-hidden animate-fade bg-opacity-50 backdrop-blur backdrop-filter;
+	@apply absolute w-full rounded-3xl z-2 p-layout overflow-hidden animate-fade;
 	box-shadow: 0 0 1rem 0 rgba(41, 39, 39, 0.2);
 
 	> h3 {
@@ -19,8 +19,8 @@
 		left: 0;
 		right: 0;
 		bottom: 0;
-		box-shadow: inset 0 0 2000px #26272c;
-		filter: blur(10px);
+		box-shadow: inset 0 0 2000px rgba(241, 241, 241, 1);
+		filter: blur(100px);
 		margin: -20px;
 	}
 }
@@ -28,8 +28,12 @@
 .list {
 	@apply flex gap-4 flex-wrap;
 	> li {
-		@apply border-2 p-2 rounded-xl border-transparent transition bg-gray-900 hover:border-primary;
+		@apply border-2 p-2 rounded-xl border-transparent transition bg-gray-200 hover:border-primary;
 		cursor: pointer;
+	}
+
+	> li > a > h6 {
+		@apply text-gray-800;
 	}
 
 	> li > a > span {
