--- a/front-end/styles/globals.scss
+++ b/front-end/styles/globals.scss
@@ -6,38 +6,37 @@
 @tailwind utilities;
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-  background: var(--dark);
-  color: #fff;
-  font-family: 'Open Sans', sans-serif;
-  padding: 0;
-  margin: 0;
+	background-color: #f9faff;
+	color: #a2abba;
+	font-family: 'Open Sans', sans-serif;
+	padding: 0;
+	margin: 0;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
-
 :root {
-  --primaryColor: "#9E00FF";
-  --dark: linear-gradient(180deg, #232429 0%, #1B1B20 100%)
+	--primaryColor: '#9E00FF';
+	--dark: '$fff';
+	--bakcgroundColor: '#F9FAFF';
 }
 
 @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+	html {
+		color-scheme: dark;
+	}
 
-  body {
-    color: white;
-    background: black;
-  }
+	body {
+		color: white;
+		background: black;
+	}
 }
-
