--- a/front-end/app/screens/auth/Auth.module.scss
+++ b/front-end/app/screens/auth/Auth.module.scss
@@ -1,5 +1,5 @@
 .auth__box {
-	@apply m-auto w-96 p-6 bg-gray-650 rounded-3xl overflow-hidden animate-fade bg-opacity-50 backdrop-blur backdrop-filter;
+	@apply m-auto w-96 p-6 bg-gray-200 rounded-3xl;
 	> h3 {
 		@apply text-center mb-6;
 	}
