--- a/front-end/app/components/layout/Header/Search/Search.module.scss
+++ b/front-end/app/components/layout/Header/Search/Search.module.scss
@@ -3,7 +3,7 @@
 }
 
 .list__box {
-	@apply absolute w-full rounded-3xl z-2 p-layout overflow-hidden animate-fade;
+	@apply absolute w-full rounded-3xl z-3 p-layout overflow-hidden  animate-fade;
 	box-shadow: 0 0 1rem 0 rgba(41, 39, 39, 0.2);
 
 	> h3 {
@@ -12,16 +12,16 @@
 
 	&::before {
 		content: '';
+		width: calc(100% + 20px);
+		height: calc(100% + 20px);
+		background: white;
+		box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.25);
 		position: absolute;
-		background: inherit;
+		top: -10px;
+		left: -10px;
 		z-index: -1;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		box-shadow: inset 0 0 2000px rgba(241, 241, 241, 1);
-		filter: blur(100px);
-		margin: -20px;
+		filter: blur(6px);
+		overflow: hidden;
 	}
 }
 
@@ -43,4 +43,11 @@
 
 .grow {
 	flex-grow: 1;
+}
+
+.search__list_item {
+	@apply mb-6;
+	> h3 {
+		@apply mb-4;
+	}
 }
