--- a/front-end/app/components/layout/Header/Search/Search.module.scss
+++ b/front-end/app/components/layout/Header/Search/Search.module.scss
@@ -3,7 +3,7 @@
 }
 
 .list__box {
-	@apply absolute w-full rounded-3xl z-3 p-layout overflow-hidden  animate-fade;
+	@apply absolute w-full rounded-3xl z-3 p-layout overflow-hidden;
 	box-shadow: 0 0 1rem 0 rgba(41, 39, 39, 0.2);
 
 	> h3 {
@@ -11,17 +11,17 @@
 	}
 
 	&::before {
-		content: '';
-		width: calc(100% + 20px);
-		height: calc(100% + 20px);
-		background: white;
-		box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.25);
 		position: absolute;
-		top: -10px;
-		left: -10px;
+		content: '';
+		background: inherit;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
 		z-index: -1;
-		filter: blur(6px);
-		overflow: hidden;
+		box-shadow: inset 0 0 0 3000px rgba(150, 150, 150, 0.192);
+		backdrop-filter: blur(10px);
+		border-radius: 15px;
 	}
 }
 
