--- a/front-end/app/screens/auth/Auth.module.scss
+++ b/front-end/app/screens/auth/Auth.module.scss
@@ -6,8 +6,12 @@
 }
 
 .toggle__auth {
-	@apply flex justify-between gap-2;
+	@apply flex items-center justify-between gap-2;
+	> p {
+		@apply select-none;
+	}
+
 	> p > span {
-		@apply text-primary underline cursor-pointer;
+		@apply text-primary underline block cursor-pointer;
 	}
 }
